--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Teambootstrap : " />
-
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/font.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet2.css">
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
@@ -45,7 +45,7 @@ $(document).ready(function() {
       <section id="main_content" class="inner">
 
 <div class="section black" id="section1">
-    <h2>Communicate</h2>
+    <h2>COMMUNICATE</h2>
     <ul class="nav">
         <li>1</li>
         <li><a href="#section2">2</a></li>
@@ -60,7 +60,7 @@ $(document).ready(function() {
 </div>
 
 <div class="section white" id="section2">
-    <h2>Task Management</h2>
+    <h2>TASK MANAGEMENT</h2>
     <ul class="nav">
         <li><a href="#section1">1</a></li>
         <li>2</li>
@@ -76,7 +76,7 @@ $(document).ready(function() {
 </div>
 
 <div class="section black" id="section1">
-    <h2>Version Control</h2>
+    <h2>VERSION CONTROL</h2>
     <ul class="nav">
         <li>1</li>
         <li><a href="#section2">2</a></li>
@@ -91,7 +91,7 @@ $(document).ready(function() {
 </div>
 
 <div class="section white" id="section2">
-    <h2>Code Review</h2>
+    <h2>CODE REVIEW</h2>
     <ul class="nav">
         <li><a href="#section1">1</a></li>
         <li>2</li>
@@ -107,7 +107,7 @@ $(document).ready(function() {
 </div>
 
 <div class="section black" id="section1">
-    <h2>Issue Tracking</h2>
+    <h2>ISSUE TRACKING</h2>
     <ul class="nav">
         <li>1</li>
         <li><a href="#section2">2</a></li>
