anand is pmsing

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@ $(document).ready(function() {
 <div class="section black" id="section1">
     <h2>Communicate</h2>
     <ul class="nav">
-        <li>1</li>
-        <li><a href="#section2">2</a></li>
-        <li><a href="#section3">3</a></li>
+        <li><a href="#section2">Next</a></li>
     </ul>
     <p>
         MY Spectre around me night and day
@@ -62,9 +60,8 @@ $(document).ready(function() {
 <div class="section white" id="section2">
     <h2>Task Management</h2>
     <ul class="nav">
-        <li><a href="#section1">1</a></li>
-        <li>2</li>
-        <li><a href="#section3">3</a></li>
+        <li><a href="#section1">Previous</a></li>
+        <li><a href="#section3">Next</a></li>
     </ul>
     <p>
         A fathomless and boundless deep,
@@ -75,12 +72,11 @@ $(document).ready(function() {
     </p>
 </div>
 
-<div class="section black" id="section1">
+<div class="section black" id="section3">
     <h2>Version Control</h2>
     <ul class="nav">
-        <li>1</li>
-        <li><a href="#section2">2</a></li>
-        <li><a href="#section3">3</a></li>
+        <li><a href="#section2">Previous</a></li>
+        <li><a href="#section4">Next</a></li>
     </ul>
     <p>
         MY Spectre around me night and day
@@ -90,12 +86,11 @@ $(document).ready(function() {
     </p>
 </div>
 
-<div class="section white" id="section2">
+<div class="section white" id="section4">
     <h2>Code Review</h2>
     <ul class="nav">
-        <li><a href="#section1">1</a></li>
-        <li>2</li>
-        <li><a href="#section3">3</a></li>
+        <li><a href="#section3">Previous</a></li>
+        <li><a href="#section5">Next</a></li>
     </ul>
     <p>
         A fathomless and boundless deep,
@@ -106,12 +101,10 @@ $(document).ready(function() {
     </p>
 </div>
 
-<div class="section black" id="section1">
+<div class="section black" id="section5">
     <h2>Issue Tracking</h2>
     <ul class="nav">
-        <li>1</li>
-        <li><a href="#section2">2</a></li>
-        <li><a href="#section3">3</a></li>
+        <li><a href="#section4">Previous</a></li>
     </ul>
     <p>
         MY Spectre around me night and day
