added next / previous clicks

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $(document).ready(function() {
 
 <div class="section black" id="section1">
     <h2>COMMUNICATE</h2>
-    <ul class="nav">
+    <ul class="nav next">
         <li><a href="#section2">Next</a></li>
     </ul>
     <p>
@@ -72,7 +72,7 @@ $(document).ready(function() {
     </p>
 </div>
 
-<div class="section black" id="section1">
+<div class="section black" id="section3">
     <h2>VERSION CONTROL</h2>
     <ul class="nav">
         <li><a href="#section2">Previous</a></li>
@@ -86,7 +86,7 @@ $(document).ready(function() {
     </p>
 </div>
 
-<div class="section white" id="section2">
+<div class="section white" id="section4">
     <h2>CODE REVIEW</h2>
     <ul class="nav">
         <li><a href="#section3">Previous</a></li>
@@ -97,14 +97,13 @@ $(document).ready(function() {
         There we wander, there we weep;
         On the hungry craving wind
         My Spectre follows thee behind.
- 
     </p>
 </div>
 
-<div class="section black" id="section1">
+<div class="section black" id="section5">
     <h2>ISSUE TRACKING</h2>
     <ul class="nav">
-        <li><a href="#section4">Previous</a></li>
+      <li><a href="#section4">Previous</a></li>
     </ul>
     <p>
         MY Spectre around me night and day
