--- a/index.html
+++ b/index.html
@@ -46,14 +46,11 @@ $(document).ready(function() {
 
 <div class="section black" id="section1">
     <h2>COMMUNICATE</h2>
-    <ul class="nav next">
+    <ul class="nav">
         <li><a href="#section2">Next</a></li>
     </ul>
     <p>
-        MY Spectre around me night and day
-        Like a wild beast guards my way;
-        My Emanation far within
-        Weeps incessantly for my sin.
+        First, you’ll need some way to communicate with your team in real-time for questions and discussions. 
     </p>
 </div>
 
@@ -64,11 +61,7 @@ $(document).ready(function() {
         <li><a href="#section3">Next</a></li>
     </ul>
     <p>
-        A fathomless and boundless deep,
-        There we wander, there we weep;
-        On the hungry craving wind
-        My Spectre follows thee behind.
- 
+        Now that you can communicate, you’ll want task management software to hold a high-level list of tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
     </p>
 </div>
 
@@ -78,12 +71,19 @@ $(document).ready(function() {
         <li><a href="#section2">Previous</a></li>
         <li><a href="#section4">Next</a></li>
     </ul>
-    <p>
-        MY Spectre around me night and day
-        Like a wild beast guards my way;
-        My Emanation far within
-        Weeps incessantly for my sin.
-    </p>
+    <div>
+        <p>
+            Next, you need a place for your team to store and manage your code during the development process.
+        </p>
+        <p>
+            A distributed version control system lets your team:
+        </p>
+        <ul>
+            <li>Easily share code and changes</li>
+            <li>Work on code in branches and merge it back when ready</li>
+            <li>See development history and revert / compare to earlier code</li>
+        </ul>
+    </div>
 </div>
 
 <div class="section white" id="section4">
@@ -93,23 +93,17 @@ $(document).ready(function() {
         <li><a href="#section5">Next</a></li>
     </ul>
     <p>
-        A fathomless and boundless deep,
-        There we wander, there we weep;
-        On the hungry craving wind
-        My Spectre follows thee behind.
+        When you’re finished making a change to your code, you should have a code review process so your teammates can look over the change and maintain code quality and functionality. 
     </p>
 </div>
 
 <div class="section black" id="section5">
     <h2>ISSUE TRACKING</h2>
     <ul class="nav">
-      <li><a href="#section4">Previous</a></li>
+        <li><a href="#section4">Previous</a></li>
     </ul>
     <p>
-        MY Spectre around me night and day
-        Like a wild beast guards my way;
-        My Emanation far within
-        Weeps incessantly for my sin.
+        In addition to your high-level priorities, you need to track, sort, and assign individual bugs and features for developers to work on. Issue tracking software helps you organize such issues.
     </p>
 </div>
 
