--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ $(document).ready(function() {
     <p>
         Now that you can communicate, you’ll want task management software to hold a high-level list of tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
     </p>
+    <div class="myframe">
+      <iframe src="http://www.cnn.com"></iframe>
+    </div>
 </div>
 
 <div class="section black" id="section3">
