--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ $(document).ready(function() {
     <p>
         First, you’ll need some way to communicate with your team in real-time for questions and discussions. 
     </p>
+    <div class="myframe">
+      <iframe src="http://support.google.com/mail/?hl=en"></iframe>
+    </div>
 </div>
 
 <div class="section white" id="section2">
@@ -64,7 +67,7 @@ $(document).ready(function() {
         Now that you can communicate, you’ll want task management software to hold a high-level list of tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
     </p>
     <div class="myframe">
-      <iframe src="http://www.cnn.com"></iframe>
+      <iframe src="http://asana.com/"></iframe>
     </div>
 </div>
 
@@ -87,6 +90,9 @@ $(document).ready(function() {
             <li>See development history and revert / compare to earlier code</li>
         </ul>
     </div>
+    <div class="myframe">
+      <iframe src="http://learn.github.com/p/setup.html"></iframe>
+    </div>
 </div>
 
 <div class="section white" id="section4">
@@ -98,6 +104,9 @@ $(document).ready(function() {
     <p>
         When you’re finished making a change to your code, you should have a code review process so your teammates can look over the change and maintain code quality and functionality. 
     </p>
+    <div class="myframe">
+      <iframe src="https://help.github.com/articles/using-pull-requests"></iframe>
+    </div>
 </div>
 
 <div class="section black" id="section5">
@@ -108,6 +117,9 @@ $(document).ready(function() {
     <p>
         In addition to your high-level priorities, you need to track, sort, and assign individual bugs and features for developers to work on. Issue tracking software helps you organize such issues.
     </p>
+    <div class="myframe">
+      <iframe src=""></iframe>
+    </div>
 </div>
 
   </body>
