--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ $(document).ready(function() {
         In addition to your high-level priorities, you need to track, sort, and assign individual bugs and features for developers to work on. Issue tracking software helps you organize such issues.
     </p>
     <div class="myframe">
-      <iframe src=""></iframe>
+      <iframe src="http://lighthouseapp.com/signup"></iframe>
     </div>
 </div>
 
