--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Teambootstrap : " />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/font.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/fonts.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet2.css">
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
