--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ $(document).ready(function() {
         <li><a href="#section2">Next</a></li>
     </ul>
     <p>
-        First, you’ll need some way to communicate with your team in real-time for questions and discussions. 
+        First, you need real-time team communication for questions and discussions. 
     </p>
     <div class="myframe">
       <iframe src="http://support.google.com/mail/?hl=en"></iframe>
