--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Teambootstrap : " />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/fonts.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet2.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/bootstrap.min.css">
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 <script type="text/javascript">// <![CDATA[
@@ -60,8 +61,8 @@ $(document).ready(function() {
 <div class="section white" id="section2">
     <h2>TASK MANAGEMENT</h2>
     <ul class="nav">
-        <li><a href="#section1">Previous</a></li>
-        <li><a href="#section3">Next</a></li>
+        <li><span class="btn"><a href="#section1">Previous</a></span></li>
+        <li><span class="btn"><a href="#section3">Next</a></span></li>
     </ul>
     <p>
         Now that you can communicate, you’ll want task management software to hold a high-level list of tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
@@ -74,8 +75,8 @@ $(document).ready(function() {
 <div class="section black" id="section3">
     <h2>VERSION CONTROL</h2>
     <ul class="nav">
-        <li><a href="#section2">Previous</a></li>
-        <li><a href="#section4">Next</a></li>
+        <li><span class="btn"><a href="#section2">Previous</a></span></li>
+        <li><span class="btn"><a href="#section4">Next</a></span></li>
     </ul>
     <div>
         <p>
@@ -98,8 +99,8 @@ $(document).ready(function() {
 <div class="section white" id="section4">
     <h2>CODE REVIEW</h2>
     <ul class="nav">
-        <li><a href="#section3">Previous</a></li>
-        <li><a href="#section5">Next</a></li>
+        <li><span class="btn"><a href="#section3">Previous</a></span></li>
+        <li><span class="btn"><a href="#section5">Next</a></span></li>
     </ul>
     <p>
         When you’re finished making a change to your code, you should have a code review process so your teammates can look over the change and maintain code quality and functionality. 
@@ -112,8 +113,7 @@ $(document).ready(function() {
 <div class="section black" id="section5">
     <h2>ISSUE TRACKING</h2>
     <ul class="nav">
-        <li><a href="#section4">Previous</a></li>
-    </ul>
+        <li><span class="btn"><a href="#section4">Previous</a></span></li>
     <p>
         In addition to your high-level priorities, you need to track, sort, and assign individual bugs and features for developers to work on. Issue tracking software helps you organize such issues.
     </p>
