added title page

--- a/index.html
+++ b/index.html
@@ -44,9 +44,20 @@ $(document).ready(function() {
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
+<div class="section white" id="section0">
+  <h2>TEAM BOOTSTRAP</h2>
+  <div class="overview">
+    <h3> Let's set up for code collaboration success </h3>
+    <ul class="nav">
+      <li><a href="#section1">Next</a></li>
+    </ul>
+  </div>
+</div>
+
 <div class="section black" id="section1">
     <h2>COMMUNICATE</h2>
     <ul class="nav">
+        <li><a href="#section0">Previous</a></li>
         <li><a href="#section2">Next</a></li>
     </ul>
     <p>
