--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ $(document).ready(function() {
 <div class="section white" id="section2">
     <h2>TASK MANAGEMENT</h2>
     <ul class="nav">
-        <li><span class="btn"><a href="#section1">Previous</a></span></li>
-        <li><span class="btn"><a href="#section3">Next</a></span></li>
+        <li><span class="btn btn-primary"><a href="#section1">Previous</a></span></li>
+        <li><span class="btn btn-primary"><a href="#section3">Next</a></span></li>
     </ul>
     <p>
         Now that you can communicate, you’ll want task management software to hold a high-level list of tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
@@ -86,8 +86,8 @@ $(document).ready(function() {
 <div class="section black" id="section3">
     <h2>VERSION CONTROL</h2>
     <ul class="nav">
-        <li><span class="btn"><a href="#section2">Previous</a></span></li>
-        <li><span class="btn"><a href="#section4">Next</a></span></li>
+        <li><span class="btn btn-primary"><a href="#section2">Previous</a></span></li>
+        <li><span class="btn btn-primary"><a href="#section4">Next</a></span></li>
     </ul>
     <div>
         <p>
@@ -110,8 +110,8 @@ $(document).ready(function() {
 <div class="section white" id="section4">
     <h2>CODE REVIEW</h2>
     <ul class="nav">
-        <li><span class="btn"><a href="#section3">Previous</a></span></li>
-        <li><span class="btn"><a href="#section5">Next</a></span></li>
+        <li><span class="btn btn-primary"><a href="#section3">Previous</a></span></li>
+        <li><span class="btn btn-primary"><a href="#section5">Next</a></span></li>
     </ul>
     <p>
         When you’re finished making a change to your code, you should have a code review process so your teammates can look over the change and maintain code quality and functionality. 
@@ -124,7 +124,7 @@ $(document).ready(function() {
 <div class="section black" id="section5">
     <h2>ISSUE TRACKING</h2>
     <ul class="nav">
-        <li><span class="btn"><a href="#section4">Previous</a></span></li>
+        <li><span class="btn btn-primary"><a href="#section4">Previous</a></span></li>
     <p>
         In addition to your high-level priorities, you need to track, sort, and assign individual bugs and features for developers to work on. Issue tracking software helps you organize such issues.
     </p>
