--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ $(document).ready(function() {
         <li><a href="#section2">Next</a></li>
     </ul>
     <p>
-        First, you need real-time team communication for questions and discussions. 
+        First, you'll need real-time team communication for questions and discussions. 
     </p>
     <div class="myframe">
       <iframe src="http://support.google.com/mail/?hl=en"></iframe>
@@ -64,7 +64,7 @@ $(document).ready(function() {
         <li><a href="#section3">Next</a></li>
     </ul>
     <p>
-        Now that you can communicate, you’ll want task management software to hold a high-level list of tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
+        You'll also want  to hold a list of tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
     </p>
     <div class="myframe">
       <iframe src="http://asana.com/"></iframe>
