--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ $(document).ready(function() {
   <div class="overview">
     <h3> Let's set up for code collaboration success </h3>
     <ul class="nav">
-      <li><a href="#section1">Next</a></li>
+        <li><span class="btn btn-primary"><a href="#section1">Next</a></span></li>    
     </ul>
   </div>
 </div>
@@ -58,8 +58,8 @@ $(document).ready(function() {
 <div class="section black" id="section1">
     <h2>COMMUNICATE</h2>
     <ul class="nav">
-        <li><a href="#section0">Previous</a></li>
-        <li><a href="#section2">Next</a></li>
+        <li><span class="btn btn-primary"><a href="#section0">Previous</a></span></li>
+        <li><span class="btn btn-primary"><a href="#section2">Next</a></span></li>
     </ul>
     <p>
         First, you need real-time team communication for questions and discussions. 
