--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
         <li><span class="btn btn-primary"><a href="#section3">Next</a></span></li>
     </ul>
     <p>
-        You'll also want  to hold a list of tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
+        You'll also want to manage your team's tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
     </p>
     <div class="myframe">
       <iframe src="http://asana.com/"></iframe>
