Tweak text styling and clean up CSS to be less stupid

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ $(document).ready(function() {
 });
 // ]]></script>
 
-    <title>Teambootstrap</title>
+    <title>Team Bootstrap</title>
 
   </head>
 
@@ -61,7 +61,7 @@ $(document).ready(function() {
         <li><a href="#section0">Previous</a></li>
         <li><a href="#section2">Next</a></li>
     </ul>
-    <p>
+    <p class="brief">
         First, you need real-time team communication for questions and discussions. 
     </p>
     <div class="myframe">
@@ -75,9 +75,14 @@ $(document).ready(function() {
         <li><span class="btn btn-primary"><a href="#section1">Previous</a></span></li>
         <li><span class="btn btn-primary"><a href="#section3">Next</a></span></li>
     </ul>
-    <p>
-        Now that you can communicate, you’ll want task management software to hold a high-level list of tasks and priorities. You can divide your program into these tasks and assign them out to your team.  
-    </p>
+    <div class="brief">
+        <p>
+            Now that you can communicate, you’ll want task management software to hold a high-level list of tasks and priorities.
+        </p>
+        <p>
+            You can divide your program into these tasks and assign them out to your team.
+        </p>
+    </div>
     <div class="myframe">
       <iframe src="http://asana.com/"></iframe>
     </div>
@@ -89,7 +94,7 @@ $(document).ready(function() {
         <li><span class="btn btn-primary"><a href="#section2">Previous</a></span></li>
         <li><span class="btn btn-primary"><a href="#section4">Next</a></span></li>
     </ul>
-    <div>
+    <div class="brief">
         <p>
             Next, you need a place for your team to store and manage your code during the development process.
         </p>
@@ -114,6 +119,7 @@ $(document).ready(function() {
         <li><span class="btn btn-primary"><a href="#section5">Next</a></span></li>
     </ul>
     <p>
+    <p class="brief">
         When you’re finished making a change to your code, you should have a code review process so your teammates can look over the change and maintain code quality and functionality. 
     </p>
     <div class="myframe">
@@ -125,7 +131,7 @@ $(document).ready(function() {
     <h2>ISSUE TRACKING</h2>
     <ul class="nav">
         <li><span class="btn btn-primary"><a href="#section4">Previous</a></span></li>
-    <p>
+    <p class="brief">
         In addition to your high-level priorities, you need to track, sort, and assign individual bugs and features for developers to work on. Issue tracking software helps you organize such issues.
     </p>
     <div class="myframe">
