--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ $(document).ready(function() {
         <li><span class="btn btn-primary"><a href="#section4">Previous</a></span></li>
     </ul>
     <p>
-        In addition to your high-level priorities, you need to track, sort, and assign individual bugs and features for developers to work on. Issue tracking software helps you organize such issues.
+        You'll also need to track, sort, assign issues to resolve individual bugs and develop new features
     </p>
     <div class="myframe">
       <iframe src="http://lighthouseapp.com/signup"></iframe>
