--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ $(document).ready(function() {
         <li><span class="btn btn-primary"><a href="#section2">Next</a></span></li>
     </ul>
     <p class="brief">
-        First, you'll need real-time team communication for questions and discussions. 
+        First, you'll need real-time team communication for questions and discussions about your project. 
     </p>
     <div class="myframe">
       <iframe src="http://support.google.com/mail/?hl=en"></iframe>
@@ -77,10 +77,10 @@ $(document).ready(function() {
     </ul>
     <div class="brief">
         <p>
-            You'll also want to manage your team's tasks and priorities.
+            You'll also want to manage your team's high-level tasks and priorities.
         </p>
         <p>
-            You should divide your software into separate tasks then distribute them among the team.
+            You should divide your software into separate tasks, then distribute them among the team.
         </p>
     </div>
     <div class="myframe">
