--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ $(document).ready(function() {
 <div class="section black" id="section1">
     <h2>COMMUNICATE</h2>
     <ul class="nav">
-        <li><span class="btn btn-primary"><a href="#section0">Previous</a></span></li>
-        <li><span class="btn btn-primary"><a href="#section2">Next</a></span></li>
+        <li style="text-align:center"><span class="btn btn-primary"><a href="#section0">Previous</a></span></li>
+        <li style="text-align:center"><span class="btn btn-primary"><a href="#section2">Next</a></span></li>
     </ul>
     <p class="brief">
         First, you'll need real-time team communication for questions and discussions. 
@@ -72,8 +72,8 @@ $(document).ready(function() {
 <div class="section white" id="section2">
     <h2>TASK MANAGEMENT</h2>
     <ul class="nav">
-        <li><span class="btn btn-primary"><a href="#section1">Previous</a></span></li>
-        <li><span class="btn btn-primary"><a href="#section3">Next</a></span></li>
+        <li style="text-align:center"><span class="btn btn-primary"><a href="#section1">Previous</a></span></li>
+        <li style="text-align:center"><span class="btn btn-primary"><a href="#section3">Next</a></span></li>
     </ul>
     <div class="brief">
         <p>
@@ -91,8 +91,8 @@ $(document).ready(function() {
 <div class="section black" id="section3">
     <h2>VERSION CONTROL</h2>
     <ul class="nav">
-        <li><span class="btn btn-primary"><a href="#section2">Previous</a></span></li>
-        <li><span class="btn btn-primary"><a href="#section4">Next</a></span></li>
+        <li style="text-align:center"><span class="btn btn-primary"><a href="#section2">Previous</a></span></li>
+        <li style="text-align:center"><span class="btn btn-primary"><a href="#section4">Next</a></span></li>
     </ul>
     <div class="brief">
         <p>
@@ -115,8 +115,8 @@ $(document).ready(function() {
 <div class="section white" id="section4">
     <h2>CODE REVIEW</h2>
     <ul class="nav">
-        <li><span class="btn btn-primary"><a href="#section3">Previous</a></span></li>
-        <li><span class="btn btn-primary"><a href="#section5">Next</a></span></li>
+        <li style="text-align:center"><span class="btn btn-primary"><a href="#section3">Previous</a></span></li>
+        <li style="text-align:center"><span class="btn btn-primary"><a href="#section5">Next</a></span></li>
     </ul>
     <p class="brief">
         When you’re finished making a change to your code, you should have a code review process so your teammates can look over the change and maintain code quality and functionality. 
@@ -129,7 +129,7 @@ $(document).ready(function() {
 <div class="section black" id="section5">
     <h2>ISSUE TRACKING</h2>
     <ul class="nav">
-        <li><span class="btn btn-primary"><a href="#section4">Previous</a></span></li>
+        <li style="text-align:center"><span class="btn btn-primary"><a href="#section4">Previous</a></span></li>
     </ul>
     <p class="brief">
         In addition to your high-level priorities, you need to track, sort, and assign individual bugs and features for developers to work on.
