--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ $(document).ready(function() {
         <li><span class="btn btn-primary"><a href="#section5">Next</a></span></li>
     </ul>
     <p class="brief">
-        When you’re finished making a change to your code, you should have a code review process so your teammates can look over the change and maintain code quality and functionality. 
+        After you revise your code, your teammates should be able to review the code for function and editability.
     </p>
     <div class="myframe">
       <iframe src="https://help.github.com/articles/using-pull-requests"></iframe>
