--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ $(document).ready(function() {
     </ul>
     <br>
     <ul class="nav">
-        <li><span class="btn btn-primary"><a href="#section1">Start</a></span></li>    
+        <li><span class="btn btn-primary btn-large"><a href="#section1">Start</a></span></li>    
     </ul>
   </div>
 </div>
