--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ $(document).ready(function() {
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-<div class="section white" id="section0">
+<div class="section white" id="section0" style="height:750px;">
   <h2>TEAM BOOTSTRAP</h2>
   <div class="overview">
     <h3> Let's set up for code collaboration success </h3>
