--- a/index.html
+++ b/index.html
@@ -54,15 +54,16 @@ $(document).ready(function() {
        We'll walk you through a full development workflow, and at each step suggest the best tools to help you get stuff done. 
     </div>
     <ul class="nav">
-        <li><span class="btn btn-primary btn-large"><a href="#section1">Communication</a></span> 
+        <li><span class="btn btn-primary btn-large"><a href="#section1">Communication</a></span>
+        <br> 
         You've got to talk to your team. We'll help you make that rapid and painless.  </li>
-        <li><span class="btn btn-info btn-large"><a href="#section2">Task Management</a></span>   
+        <li><span class="btn btn-info btn-large"><a href="#section2">Task Management</a></span><br>   
         Divide and conquer. We'll help you divide up your teams tasks, and keep track of them.  </li>
-        <li><span class="btn btn-success btn-large"><a href="#section3">Version Control</a></span>    
+        <li><span class="btn btn-success btn-large"><a href="#section3">Version Control</a></span><br>    
         Keeping everyone on the same page requires sharing code. We'll show you the best tools to host and synchronize your development efforts. </li> 
-        <li><span class="btn btn-warning btn-large"><a href="#section4">Code Review</a></span>
+        <li><span class="btn btn-warning btn-large"><a href="#section4">Code Review</a></span><br>
         A second pair of eyes is always good. Code Review is critical to getting eyes on every line of code you write. We'll show you how.  </li>
-        <li><span class="btn btn-danger btn-large"><a href="#section5">Issue Tracking</a></span>
+        <li><span class="btn btn-danger btn-large"><a href="#section5">Issue Tracking</a></span><br>
         Bugs happen. We'll show you how to keep track of them. </li> 
     </ul>
     <br>
